--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 
 include_directories(${root_SOURCE_DIR}/include)
-add_library(circus_client client.cpp json11.cpp)
+add_library(circus_client client.cpp json11.cpp circus_exception.cpp)
 
