--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
  - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
  - sudo apt-get update -qq
  - sudo apt-get install cmake
+ - sudo apt-get install install zeromq-devel
 
 script: mkdir build && cd build && cmake ../ && make
