--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: cpp
 compiler:
   - gcc
+  - clang
 
 before_install:
  - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
  - sudo apt-get update -qq
  - sudo apt-get install cmake
- - sudo apt-get install install zeromq-devel
+ - sudo apt-get install zeromq-devel
 
 script: mkdir build && cd build && cmake ../ && make
