--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
  - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
  - sudo apt-get update -qq
  - sudo apt-get install cmake
- - sudo apt-get install zeromq-devel
+ - sudo apt-get install libzmq-dev
 
 script: mkdir build && cd build && cmake ../ && make
