--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install cmake
  - sudo apt-get install libzmq3-dev
+ - sudo apt-get install -qq libboost-dev
 
 script: mkdir build && cd build && cmake ../ && make
